sigmoid function research

--- a/common/norm_minimization.tex
+++ b/common/norm_minimization.tex
@@ -748,21 +748,18 @@ $\ds \esth(t) \eqd \frac{H_{\infty}}{1+\brp{\frac{H_{\infty}}{H_0}-1}e^{-\alpha 
         && \text{by definition of $\esth(t)$}
     \end{align*}
 
-  \item lemma:\label{ilem:plant2}
-    \begin{align*}
-      \boxed{\pderiv{}{B}\esth(t)}
-        &\eqd \pderiv{}{B }\brs{\frac{A}{1+\brp{\frac{A}{B}-1}e^{-\alpha t}}}
+  \item lemma:\label{ilem:plant3}
+  \begin{align*}
+      \boxed{\pderiv{}{N_0}\esth(t)}
+        &\eqd \pderiv{}{N_0 }\brs{\frac{N_*}{1+\brp{\frac{N_*}{N_0}-1}e^{-a_0 t}}}
         && \text{by definition of $\esth(t)$}
-      \\&= \frac{ - (A/B^2)e^{-\alpha t}}
-                {\brp{1+\brs{\frac{A}{B}-1}e^{-\alpha t}}^2}
+      \\&= \frac{ - N_*\brp{\frac{-1}{N_0^2}}e^{-a_0 t}}
+                {\brs{1+\brp{\frac{N_*}{N_0}-1}e^{-a_0 t}}^2}
         && \text{by Quotient Rule}
-\\
-\\
-      \\&= \frac{1 - e^{-\alpha t}}
-                {\brp{1 + \brs{\frac{A}{B}-1}e^{-\alpha t}}^2}
-      \\&= \brs{\frac{1 - e^{-\alpha t}} {A^2}}
-           \brs{\frac{A}                 {1 + \brs{\frac{A}{B}-1}e^{-\alpha t}}}^2
-      \\&\eqd \boxed{\brs{\frac{1 - e^{-\alpha t}}{A^2}} \esth^2(t)}
+      \\&= \brs{ \frac{e^{-a_0 t}}{N_*N_0^2}}
+           \brs{\frac{N_*}{1+\brs{\frac{N_*}{N_0}-1}e^{-a_0 t}}}^2
+      \\&= \brs{ \frac{e^{-a_0 t}}{N_*N_0^2}}
+           \esth^2(t)
         && \text{by definition of $\esth(t)$}
     \end{align*}
 
@@ -804,6 +801,27 @@ $\ds \esth(t) \eqd \frac{H_{\infty}}{1+\brp{\frac{H_{\infty}}{H_0}-1}e^{-\alpha 
                             \brs{\frac{1 - e^{-\alpha t_n}}{A^2}} \esth^2(t_n)
       && \text{by \pref{ilem:plant2}}
     \\&= \boxed{\sum_{n=0}^{n=10} \esth^2(t_n) \brs{\esth(t_n)-y_n} \brs{1 - e^{-\alpha t_n} }}
+    \end{align*}
+
+  \item 
+    \begin{align*}
+    \boxed{0}
+      &= \frac{N_*N_0^2}{2}\cdot0
+    \\&=\frac{N_*N_0^2}{2}
+         \pderiv{}{N_0}\norm{e}^2
+    \\&\eqd \frac{N_*N_0^2}{2}
+         \pderiv{}{N_0}\sum_{n=0}^{n=10}e^2(t_n)
+      && \text{by definition of $\norm{\cdot}$}
+    \\&\eqd \frac{N_*N_0^2}{2}
+         \pderiv{}{N_0}\sum_{n=0}^{n=10}\brs{\esth(t_n)-y_n}^2
+      && \text{by definition of $e$}
+    \\&= \frac{N_*N_0^2}{2}
+         \sum_{n=0}^{n=10}2\brs{\esth(t_n)-y_n} \pderiv{}{N_0}\esth(t_n)
+      && \text{by Chain Rule}
+    \\&= \frac{N_*N_0^2}{2}
+         \sum_{n=0}^{n=10}2\brs{\esth(t_n)-y_n} \brs{ \frac{e^{-a_0 t_n}}{N_*N_0^2}}\esth^2(t_n)
+      && \text{by lemma}
+    \\&= \boxed{\sum_{n=0}^{n=10} \esth^2(t_n)\brs{\esth(t_n)-y_n} e^{-a_0 t_n} }
     \end{align*}
 \end{enumerate}
 
