vsinprod uncomment norms that do/do-not induce inprods

--- a/common/frames.tex
+++ b/common/frames.tex
@@ -1031,7 +1031,7 @@ The \fnctd{Kronecker delta function} $\hxs{\kdelta_n}$ is defined as
   $\ds\kdelta_n\eqd
     \brbl{\begin{array}{cMD}
       1 & for $n=0$ & and \\
-      0 & for $n\ne 0$\..
+      0 & otherwise
     \end{array}}
   \qquad\scy
   \forall n\in\Z$
