cosh, sinh, delta

--- a/common/bib/mathmisc.bib
+++ b/common/bib/mathmisc.bib
@@ -45,6 +45,16 @@
   urlw         = {http://www.worldcat.org/isbn/0387912207},
   }
 
+@book{aristotle,
+  author       = {Aristotle},
+  title        = {The Works of Aristotle},
+  year         = {1908},
+  publisher    = {Clarendon Press},
+  language     = {English},
+  editor       = {J. A. Smith and W. D. Ross},
+  url          = {http://books.google.com/books?id=VovIeRQqnX4C},
+  }
+
 @book{aryabhata,
   author       = {Aryabhata},
   title        = {Aryabhata-Siddhanta},
@@ -857,6 +867,18 @@
   url          = {http://onlinelibrary.wiley.com/doi/10.1111/tops.12071/full},
   }
 
+@book{paine2000,
+  isbn10       = {0395984149},
+  isbn         = {9780395984147},
+  url          = {http://books.google.com/books?vid=ISBN9780395984149},
+  title        = {Warships of the World to 1900},
+  series       = {Ships of the World Series},
+  author       = {Lincoln P. Paine},
+  publisher    = {Houghton Mifflin Harcourt},
+  year         = {2000},
+  pages        = {266},
+  }
+  
 @book{pascal1655,
   author       = {Blaise Pascal},
   title        = {Trait{/'e} du Triangle Arithm{/'e}tique},
@@ -922,6 +944,16 @@
   urlw         = {http://www.worldcat.org/oclc/20282324},
   }
 
+@book{saxelby1920,
+  author       = {Frank Moulton Saxelby},
+  title        = {A course in practical mathematics},
+  year         = {1920},
+  url          = {https://archive.org/details/courseinpractica00saxerich/},
+  edition      = {6},
+  publisher    = {Longmans, Green, and Co.},
+  address      = {39 Paternoster Row, London},
+  }
+
 @book{stanley1997,
   title        = {Enumerative Combinatorics},
   series       = {Cambridge studies in advanced mathematics},
@@ -984,6 +1016,71 @@
   urlw         = {http://www.worldcat.org/isbn/1420035223},
   }
 
+@article{weyl1935,
+  title        = {Emmy Noether},
+  author       = {Hermann Weyl},
+  year         = {1935},
+  month        = {April 26},
+  journalx     = {Scripta Mathematica: A Quarterly Journal Devoted to the Philosophy, History, and Expository Treatment of Mathematics},
+  journal      = {Scripta Mathematica\ldots},
+  volume       = {3},
+  pages        = {201--220},
+  note         = {memorial address at Bryn Mawr College},
+  url          = {http://link.springer.com/chapter/10.1007/978-1-4684-0535-4_6},
+  }
+
+@incollection{weyl1935p,
+  title        = {Emmy Noether},
+  booktitle    = {Levels of Infinity: Selected Writings on Mathematics and Philosophy},
+  author       = {Hermann Weyl},
+  editor       = {Peter Pesic},
+  year         = {1935},
+  month        = {April 26},
+  publisher    = {Courier Dover Publications},
+  isbn10       = {0486266931},
+  isbn         = {9780486266930},
+  url          = {http://books.google.com/books?vid=ISBN0486266931},
+  urlw         = {http://www.worldcat.org/isbn/0486266931},
+  urla         = {http://www.amazon.com/dp/0486266931},
+  }
+
+@incollection{weyl1935d,
+  title        = {Emmy Noether},
+  booktitle    = {Emmy Noether 1882--1935},
+  author       = {Hermann Weyl},
+  editor       = {Auguste Dick},
+  year         = {1935},
+  month        = {April 26},
+  publisher    = {Birkh/:auser},
+  address      = {Boston},
+  isbn         = {978-1-4684-0537-8},
+  pages        = {112--152},
+  url          = {http://link.springer.com/chapter/10.1007/978-1-4684-0535-4_6},
+  }
+
+@book{wiener1948,
+  title        = {Cybernetics Or Communication And Control In The Animal And The Machine},
+  author       = {Norbert Wiener},
+  year         = {1948},
+  url          = {https://archive.org/details/CyberneticsOrCommunicationAndControlInTheAnimalAndTheMachineNorbertWiener/page/n0},
+  edition      = {1},
+  publisher    = {M.I.T. Press},
+  address      = {Cambridge, MA, USA},
+  }
+  
+@article{yates1963,
+  title        = {Ronald Aylmer Fisher, 1890--1962},
+  journal      = {Biographical Memoirs of Fellows of the Royal Society of London},
+  volume       = {9},
+  pages        = {90--120},
+  year         = {1963},
+  month        = {November},
+  author       = {Frank Yates and Kenneth Mather},
+  publisher    = {Royal Society of London},
+  url          = {https://doi.org/10.1098/rsbm.1963.0006},
+  note         = {print ISSN:0080-4606, online ISSN:1748-8494, \url{https://pdfs.semanticscholar.org/6ccd/4303f68f3543fc794c376ce00395947a79b6.pdf}},
+  }
+
 @book{zayed,
   author       = {Ahmed I. Zayed},
   editor       = {Daniel Zwillinger},
@@ -1005,18 +1102,6 @@
 
 
 
-
-
-
-@book{aristotle,
-  author       = {Aristotle},
-  title        = {The Works of Aristotle},
-  year         = {1908},
-  publisher    = {Clarendon Press},
-  language     = {English},
-  editor       = {J. A. Smith and W. D. Ross},
-  url          = {http://books.google.com/books?id=VovIeRQqnX4C},
-  }
 
 @book{deonaraine,
   author       = {Ramesh Deonaraine},
@@ -1417,79 +1502,3 @@
   url          = {http://dx.doi.org/10.1119/1.1933371}
   }
 
-@book{paine2000,
-  isbn10       = {0395984149},
-  isbn         = {9780395984147},
-  url          = {http://books.google.com/books?vid=ISBN9780395984149},
-  title        = {Warships of the World to 1900},
-  series       = {Ships of the World Series},
-  author       = {Lincoln P. Paine},
-  publisher    = {Houghton Mifflin Harcourt},
-  year         = {2000},
-  pages        = {266},
-  }
-  
-@book{wiener1948,
-  title        = {Cybernetics Or Communication And Control In The Animal And The Machine},
-  author       = {Norbert Wiener},
-  year         = {1948},
-  url          = {https://archive.org/details/CyberneticsOrCommunicationAndControlInTheAnimalAndTheMachineNorbertWiener/page/n0},
-  edition      = {1},
-  publisher    = {M.I.T. Press},
-  address      = {Cambridge, MA, USA},
-  }
-  
-@article{weyl1935,
-  title        = {Emmy Noether},
-  author       = {Hermann Weyl},
-  year         = {1935},
-  month        = {April 26},
-  journalx     = {Scripta Mathematica: A Quarterly Journal Devoted to the Philosophy, History, and Expository Treatment of Mathematics},
-  journal      = {Scripta Mathematica\ldots},
-  volume       = {3},
-  pages        = {201--220},
-  note         = {memorial address at Bryn Mawr College},
-  url          = {http://link.springer.com/chapter/10.1007/978-1-4684-0535-4_6},
-  }
-
-@incollection{weyl1935p,
-  title        = {Emmy Noether},
-  booktitle    = {Levels of Infinity: Selected Writings on Mathematics and Philosophy},
-  author       = {Hermann Weyl},
-  editor       = {Peter Pesic},
-  year         = {1935},
-  month        = {April 26},
-  publisher    = {Courier Dover Publications},
-  isbn10       = {0486266931},
-  isbn         = {9780486266930},
-  url          = {http://books.google.com/books?vid=ISBN0486266931},
-  urlw         = {http://www.worldcat.org/isbn/0486266931},
-  urla         = {http://www.amazon.com/dp/0486266931},
-  }
-
-@incollection{weyl1935d,
-  title        = {Emmy Noether},
-  booktitle    = {Emmy Noether 1882--1935},
-  author       = {Hermann Weyl},
-  editor       = {Auguste Dick},
-  year         = {1935},
-  month        = {April 26},
-  publisher    = {Birkh/:auser},
-  address      = {Boston},
-  isbn         = {978-1-4684-0537-8},
-  pages        = {112--152},
-  url          = {http://link.springer.com/chapter/10.1007/978-1-4684-0535-4_6},
-  }
-
-@article{yates1963,
-  title        = {Ronald Aylmer Fisher, 1890--1962},
-  journal      = {Biographical Memoirs of Fellows of the Royal Society of London},
-  volume       = {9},
-  pages        = {90--120},
-  year         = {1963},
-  month        = {November},
-  author       = {Frank Yates and Kenneth Mather},
-  publisher    = {Royal Society of London},
-  url          = {https://doi.org/10.1098/rsbm.1963.0006},
-  note         = {print ISSN:0080-4606, online ISSN:1748-8494, \url{https://pdfs.semanticscholar.org/6ccd/4303f68f3543fc794c376ce00395947a79b6.pdf}},
-  }
