--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -1166,29 +1166,55 @@ Let $\setind_\setA(x)$ be the \fncte{set indicator function} \xref{def:setind} o
 %-------------------------------------
 \exbox{
   \opFT\brs{e^{-\alpha\abs{x}}}
-  = \frac{1}{\sqrt{2\pi}}\frac{2\alpha}{\alpha^2+\omega^2}
+  = \frac{1}{\sqrt{2\pi}}\brs{\frac{2\alpha}{\alpha^2+\omega^2}}
   }
 \end{example}
 \begin{proof}
 \begin{align*}
-  \fG(\omega)
-    &\eqd \frac{1}{\sqrt{2\pi}}\int_{-\infty}^{\infty}\fg(\tau)e^{-j\omega\tau}\dtau
+  \sqrt{2\pi}\opFT\brs{e^{-\alpha\abs{x}}}
+    &\eqd \brs{\sqrt{2\pi}}\frac{1}{\sqrt{2\pi}}\int_{-\infty}^{\infty} e^{-\alpha\abs{\tau}} e^{-j\omega\tau}\dtau
     && \text{by definition Fourier Transform}
-  \\&\eqd \frac{1}{\sqrt{2\pi}}\int_{-\infty}^{\infty} e^{-\alpha\abs{\tau}} e^{-j\omega\tau}\dtau
-    && \text{by definition of $\fg(\tau)$}
-  \\&= \frac{1}{\sqrt{2\pi}}\int_{-\infty}^{0} e^{-\alpha(-\tau)} e^{-j\omega\tau}\dtau
-     + \frac{1}{\sqrt{2\pi}}\int_{0}^{\infty} e^{-\alpha(\tau)} e^{-j\omega\tau}\dtau
-  \\&= \frac{1}{\sqrt{2\pi}}\int_{-\infty}^{0} e^{\tau(\alpha-j\omega)}\dtau
-     + \frac{1}{\sqrt{2\pi}}\int_{0}^{\infty} e^{\tau(-\alpha-j\omega)}\dtau
-  \\&= \frac{1}{\sqrt{2\pi}}\brlr{\frac{e^{\tau(\alpha-j\omega)}}{\alpha-j\omega}}_{-\infty}^{0} 
-     + \frac{1}{\sqrt{2\pi}}\brlr{\frac{e^{\tau(-\alpha-j\omega)}}{-\alpha-j\omega}}_{0}^{\infty} 
+  \\&= \int_{-\infty}^{0} e^{-\alpha(-\tau)} e^{-j\omega\tau}\dtau
+     + \int_{0}^{\infty} e^{-\alpha(\tau)} e^{-j\omega\tau}\dtau
+  \\&= \int_{-\infty}^{0} e^{\tau(\alpha-j\omega)}\dtau
+     + \int_{0}^{\infty} e^{\tau(-\alpha-j\omega)}\dtau
+  \\&= \brlr{\frac{e^{\tau(\alpha-j\omega)}}{\alpha-j\omega}}_{-\infty}^{0} 
+     + \brlr{\frac{e^{\tau(-\alpha-j\omega)}}{-\alpha-j\omega}}_{0}^{\infty} 
     && \text{by Fundamental Theorem of Calculus}
-  \\&= \frac{1}{\sqrt{2\pi}}\brs{\frac{1}{\alpha-j\omega} - 0}
-     + \frac{1}{\sqrt{2\pi}}\brs{0- \frac{1}{-\alpha-j\omega}}
-  \\&= \frac{1}{\sqrt{2\pi}}\brs{\frac{1}{\alpha-j\omega}}\brs{\frac{\alpha-j\omega}{\alpha-j\omega}}
-     + \frac{1}{\sqrt{2\pi}}\brs{\frac{1}{\alpha+j\omega}}\brs{\frac{\alpha+j\omega}{\alpha+j\omega}}
-  \\&= \frac{1}{\sqrt{2\pi}}\frac{\alpha-j\omega}{\alpha^2+\omega^2}
-     + \frac{1}{\sqrt{2\pi}}\frac{\alpha+j\omega}{\alpha^2+\omega^2}
-  \\&= \boxed{\frac{1}{\sqrt{2\pi}}\frac{2\alpha}{\alpha^2+\omega^2}}
+  \\&= \brs{\frac{1}{\alpha-j\omega} - 0}
+     + \brs{0- \frac{1}{-\alpha-j\omega}}
+  \\&= \brs{\frac{1}{\alpha-j\omega}}\brs{\frac{\alpha-j\omega}{\alpha-j\omega}}
+     + \brs{\frac{1}{\alpha+j\omega}}\brs{\frac{\alpha+j\omega}{\alpha+j\omega}}
+  \\&= \frac{\alpha-j\omega}{\alpha^2+\omega^2}
+     + \frac{\alpha+j\omega}{\alpha^2+\omega^2}
+  \\&= \brs{\frac{2\alpha}{\alpha^2+\omega^2}}
 \end{align*}
 \end{proof}
+
+%%-------------------------------------
+%\begin{example}
+%\label{ex:cosexp}
+%\footnote{
+%  \url{https://math.stackexchange.com/questions/4015842/}
+%  }
+%%-------------------------------------
+%\exbox{
+%  \opFT\brs{\cos(\beta x)e^{-\alpha\abs{x}}}
+%  = \frac{1}{\sqrt{2\pi}}\brs{\frac{\alpha}{\alpha^2+(\beta-\omega)^2}}
+%  }
+%\end{example}
+%\begin{proof}
+%\begin{align*}
+%  \sqrt{2\pi}\opFT\brs{\cos(\beta\tau)e^{-\alpha\abs{\tau}}}
+%    &\eqd \brs{\sqrt{2\pi}}\frac{1}{\sqrt{2\pi}}\int_{-\infty}^{\infty} \cos(\beta x)e^{-\alpha\abs{\tau}} e^{-j\omega\tau}\dtau
+%    && \text{by definition Fourier Transform}
+%  \\&= \int_{-\infty}^{\infty} \brs{\frac{e^{i\beta\tau}+e^{-i\beta\tau}}{2}} e^{-\alpha\abs{\tau}} e^{-j\omega\tau}\dtau
+%    &&  \text{by \thme{Euler's identity}}&&\text{\xref{thm:eid}}
+%  \\&= \frac{1}{2}\int_{-\infty}^{\infty} \brs{e^{-\alpha\abs{\tau}i\beta\tau-j\omega\tau}+e^{-\alpha\abs{\tau}-i\beta\tau-j\omega\tau}} \dtau
+%  \\
+%  \\
+%  \\&= \frac{1}{\sqrt{2\pi}}\brs{\frac{\alpha}{\alpha^2+(\beta-\omega)^2}}
+%\end{align*}
+%\end{proof}
+
+
