IFT questionable quasi-proof

--- a/posts/math-4015842_IFT-etau2.tex
+++ b/posts/math-4015842_IFT-etau2.tex
@@ -129,5 +129,5 @@ Then we can use the above 2 lemmas to finish the proof...
   && \text{by lemma 2}
   \\&= \frac{2\alpha}{\alpha^2-\omega^2}
 \end{align*}
-And so, the Inverse Fourier Transform of $\frac{\alpha}{\alpha^2-\omega^2}$ is (? or maybe not ?)
+And so, the Inverse Fourier Transform of $\frac{2\alpha}{\alpha^2-\omega^2}$ is (? or maybe not ?)
 $$\brs{\cos(\omega)\cosh(\omega)-j\sin(\omega)\sinh(\omega)}e^{-\alpha\abs{\tau}}$$
